--- a/source/404.html
+++ b/source/404.html
@@ -1,4 +1,7 @@
-<!DOCTYPE HTML>
+layout: false
+title: "404"
+date: 2016-11-01 9:03:48
+---
 <html>
 <head>
   <meta http-equiv="content-type" content="text/html;charset=utf-8;"/>
