--- a/source/404.html
+++ b/source/404.html
@@ -10,6 +10,6 @@ date: 2016-11-01 9:03:48
   <meta name="robots" content="index,follow"/>
 </head>
 <body>
-<script type="text/javascript" src="http://www.qq.com/404/search_children.js" charset="utf-8" homePageUrl="your-site-url" homePageName="回到我的主页"></script>
+<script type="text/javascript" src="http://www.qq.com/404/search_children.js" charset="utf-8" homePageUrl="http://leolan.top" homePageName="回到我的主页"></script>
 </body>
 </html>
