--- a/source/404.html
+++ b/source/404.html
@@ -2,6 +2,8 @@ layout: false
 title: "404"
 date: 2016-11-01 9:03:48
 ---
+
+<!doctype html>
 <html>
 <head>
   <meta http-equiv="content-type" content="text/html;charset=utf-8;"/>
@@ -13,3 +15,4 @@ date: 2016-11-01 9:03:48
 <script type="text/javascript" src="http://www.qq.com/404/search_children.js" charset="utf-8" homePageUrl="http://leolan.top" homePageName="回到我的主页"></script>
 </body>
 </html>
+
