--- a/index.html
+++ b/index.html
@@ -86,15 +86,15 @@
 
 
 
-<meta name="description" content="Better late than never.">
+<meta name="description" content="Better late than never">
 <meta property="og:type" content="website">
 <meta property="og:title" content="Leo Lan的博客">
 <meta property="og:url" content="http://leolan.coding.me/index.html">
 <meta property="og:site_name" content="Leo Lan的博客">
-<meta property="og:description" content="Better late than never.">
+<meta property="og:description" content="Better late than never">
 <meta name="twitter:card" content="summary">
 <meta name="twitter:title" content="Leo Lan的博客">
-<meta name="twitter:description" content="Better late than never.">
+<meta name="twitter:description" content="Better late than never">
 
 
 
@@ -563,7 +563,7 @@
                src="/images/avatar.jpg"
                alt="Leo Lan" />
           <p class="site-author-name" itemprop="name">Leo Lan</p>
-          <p class="site-description motion-element" itemprop="description">Better late than never.</p>
+          <p class="site-description motion-element" itemprop="description">Better late than never</p>
         </div>
         <nav class="site-state motion-element">
           <div class="site-state-item site-state-posts">
