--- a/source/love/index.html
+++ b/source/love/index.html
@@ -20,15 +20,16 @@
 </head>
     <body>
 	<audio autoplay="autopaly">
-					<source src="renxi.mp3" type="audio/mp3" />
+					<source src="Victoria Acosta - Could This Be Love.mp3" type="audio/mp3" />
 			</audio>  	 
         <div id="main">
             <div id="error">本页面采用HTML5编辑，目前您的浏览器无法显示，请换成谷歌(<a href="http://rj.baidu.com/soft/detail/14744.html?ald">Chrome</a>)或者火狐(<a href="http://rj.baidu.com/soft/detail/11843.html">Firefox</a>)浏览器，或者其他游览器的最新版本。</div>
              <div id="wrap">
                 <div id="text">
 			        <div id="code">
-			      <font color="#FF0000">  	<span class="say">亲爱的妙崽崽</span><br>
-				  <span class="say">我爱你，非常想念你！</span><br>
+			      <font color="#FF0000">  	<span class="say"><font size="5px" color=#ff6633 align ="left">亲爱的崽崽：</font></span><br>
+				  <span class="say"><font size="4px">今天是我们第一个1214 ，今天我们已经相爱了348天啦(｡˘•ε•˘｡)
+				  　去年的那个1214我们在干嘛呢？在一起快一年啦！我们一起去旅游，一起去吃各种美食，经历了很多快乐的时光；偶尔也会拌拌嘴、闹闹变扭。和你在一起我的人生充满了更多的期待，更多的美好。宝宝，我非常喜欢你，我希望我能成为你的依靠，任何时候只要想到我，再大的困难也不怕！</font></span><br><br>
 						<!--<span class="say"> </span><br>
 <span class="say"> </span><br>
 						<span class="say"> </span><br>
@@ -38,16 +39,16 @@
 			        	<span class="say"></span><br>
 <span class="say"></span><br>-->
 
- <span class="say">我想在这里对你说</span><br>
+ <span class="say"><font size="5px" color=#ff6633 align ="left">我想告诉你:</font></span>
 						<span class="say"> </span><br>
-                        <span class="say"><span class="space"></span>我爱你</span><br>
-						<span class="say"><span class="space"></span> 小蓝蓝</span>
+                        <span class="say"><span class="space"></span><font size="4px">宝贝，我爱你！我会好好的呵护你、爱护你！带你去游玩，一起吃吃吃！</font></span><br>
+						<span class="say"><span class="space"></span><font size="3px" color=#0099ff align ="right">---你的小蓝蓝</font></span>
 			  </font></p>
       </div>
                 </div>
                 <div id="clock-box">
-                    <span class="STYLE1"></span><font color="#33CC00">截至今天我们已经</font>
-<span class="STYLE1"> 默默走过了</span>
+                    <span class="STYLE1"></span><font color="#33CC00">截至到现在我们已经</font>
+<span class="STYLE1"> 相爱了</span>
                   <div id="clock"></div>
               </div>
                 <canvas id="canvas" width="1100" height="680"></canvas>
