--- a/X2/index.html
+++ b/X2/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>The Golden Template | Home </title>
+<title>麒麟工作室 | KylinStudio </title>
 <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -53,20 +53,20 @@
 		<!-- start top-nav-->
 		<div class="h_right">
 			<ul class="menu">		
-				<li class="active"><a  href="#home">Home</a></li>
-				<li><a href="#services" class="scroll">Services</a></li>
-				<li><a href="#portfolio" class="scroll">Portfolio</a></li>
-				<li><a href="#about" class="scroll">About</a></li>
-				<li class="last"><a href="#contact"  class="scroll">Contact</a></li>
+				<li class="active"><a  href="index.html">主页</a></li>
+				<li><a href="new.html">最新动态</a></li>
+			<!--	<li><a href="#portfolio" class="scroll">Portfolio</a></li>  -->
+				<li><a href="about.html">关于</a></li>
+				<li class="last"><a href="contact.html">联系我们</a></li>
 			</ul>			
 			<!-- start smart_nav * -->
 	        <nav class="nav">
 	            <ul class="nav-list">
-	                <li class="nav-item"><a  href="#home">Home</a></li>
-	                <li class="nav-item"><a href="#services" class="scroll">Services</a></li>
-	                <li class="nav-item"><a href="#portfolio" class="scroll">Portfolio</a></li>	            
-	                <li class="nav-item"><a href="#about" class="scroll">About</a></li>
-	                <li class="nav-item"><a href="#contact"  class="scroll">Contact</a></li>
+	                <li class="nav-item"><a  href="index.html">主页</a></li>
+	                <li class="nav-item"><a href="new.html">最新动态</a></li>
+	             <!--   <li class="nav-item"><a href="#portfolio" class="scroll">Portfolio</a> </li> -->   
+	                <li class="nav-item"><a href="about.html">关于</a></li>
+	                <li class="nav-item"><a href="contact.html">联系我们</a></li>
 	                <div class="clear"></div>
 	            </ul>
 	        </nav>
@@ -77,9 +77,11 @@
 
 			</div>
 			</div>
-			<!---//End-header--->
+			<!--//End-header-->
+
+<!-- #######################以上是site文件头########################################### -->
 <!-- start main -->
-				<!---start-da-slider----->
+				<!--start-da-slider-->
 				<div id="da-slider" class="da-slider">
 				<div class="da-slide">
 					<p>Welcome To Our Studio!</p>
@@ -106,12 +108,12 @@
 					<span class="da-arrows-next"></span>
 				</nav>
 			</div>
- 			<!---//End-da-slider----->
+ 			<!---//End-da-slider---->
  		</div>
-		<div class="copyrights">Collect from <a href="http://www.cssmoban.com/"  title="网站模板">网站模板</a></div>
+
 		  <div class="services" id="services">
 		  	<div class="wrap">
-		  		<h3>SERVICES</h3>
+		  		<h3>专业技能</h3>
 		  		<p>Proin iaculis purus consequat sem cure.</p>
 				<div class="col_1_of_3 span_1_of_3">
 					<img src="images/service1.png" alt=""/>
@@ -133,7 +135,7 @@
    		 </div>
  		<div class="portfolio" id="portfolio">
 		  	<div class="wrap">
-		  		<h3>PORTFOLIO</h3>
+		  		<h3>成果展示</h3>
 		  		<p>Proin iaculis purus consequat sem cure.</p>
 			<div class="col_1_of_3 span_1_of_3">
 					  <div class="view view-fourth">
@@ -210,100 +212,10 @@
 			<div class="clear"></div>								  						
 			</div>   		 
    		 </div>
-   		 <!---start-about---->
-		  <div class="about" id="about">
-		  	<div class="wrap">
-		  		<h3>ABOUT</h3>
-		  		<p class="a">Proin iaculis purus consequat sem cure.</p>
-				<!---start-about-time-line---->
-				<div class="about-time-line">
-					<li>
-							<div class="cbp_tmicon img1"> </div>
-							<div class="cbp_tmlabel">
-								<h2>JULY 2010</h2>
-								<h2>Our Humble Beginnings</h2>
-								<p>Proin iaculis purus consequat sem cure  digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt. Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit.</p>
-							</div>
-					</li>
-					<li>
-							<div class="cbp_tmicon1 img2"> </div>
-							<div class="cbp_tmlabel cbp_tmlabel1">
-								<h2>JANUARY 2011</h2>
-								<h2>Facing Startup Battles </h2>
-								<p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt. Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.</p>
-							</div>
-					</li><br />
-					<li>
-							<div class="cbp_tmicon2 img3"> </div>
-							<div class="cbp_tmlabel">
-								<h2>DECEMBER 2012</h2>
-								<h2>Enter The Dark Days </h2>
-								<p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt. Proin iaculis purus consequat sem cure digni.</p>
-							</div>
-					</li>
-					<li>
-							<div class="cbp_tmicon3 img4"> </div>
-							<div class="cbp_tmlabel cbp_tmlabel1">
-								<h2>FEBRUARY 2014</h2>
-								<h2>Our Triumph </h2>
-								<p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt. Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean.</p>
-							</div>
-					</li>
-					<li>
-							<div class="cbp_tmicon4 img5"> </div>
-					</li>
-					<div class="clear"> </div>
-   		   </div>
-   		 </div>    
-   		</div>
- 			<!---//end-about---->     
-           <!----start-team-members---->
-				<div class="team-members">
-					<div class="wrap"> 
-						<div class="tm-head">
-							<h3>our amazing team</h3>
-							<p>Proin iaculis purus consequat sem cure.</p>
-						</div>
-						<div class="tm-head-grids">
-							<div class="tm-head-grid">
-								<img src="images/team-member1.jpg" alt="" />
-								<h4>Kimberly Thompson</h4>
-								<h5>Marketer</h5>
-								<ul class="top-social-icons">
-									<li><a class="twitter simptip-position-bottom simptip-movable" data-tooltip="twitter" href="#"> </a></li>
-									<li><a class="facebook simptip-position-bottom simptip-movable" data-tooltip="Facebook" href="#"> </a></li>
-									<li><a class="pin simptip-position-bottom simptip-movable" data-tooltip="pintrest" href="#"> </a></li>
-									<div class="clear"> </div>
-								</ul>
-							</div>
-							<div class="tm-head-grid">
-								<img src="images/team-member2.jpg" alt="" />
-								<h4>Rico Massimo</h4>
-								<h5>Coder</h5>
-								<ul class="top-social-icons">
-									<li><a class="twitter simptip-position-bottom simptip-movable" data-tooltip="twitter" href="#"> </a></li>
-									<li><a class="facebook simptip-position-bottom simptip-movable" data-tooltip="Facebook" href="#"> </a></li>
-									<li><a class="pin simptip-position-bottom simptip-movable" data-tooltip="pintrest" href="#"> </a></li>
-									<div class="clear"> </div>
-								</ul>
-							</div>
-							<div class="tm-head-grid">
-								<img src="images/team-member3.jpg" alt="" />
-								<h4>Uku Mason</h4>
-								<h5>Graphic Designer</h5>
-								<ul class="top-social-icons">
-									<li><a class="twitter simptip-position-bottom simptip-movable" data-tooltip="twitter" href="#"> </a></li>
-									<li><a class="facebook simptip-position-bottom simptip-movable" data-tooltip="Facebook" href="#"> </a></li>
-									<li><a class="pin simptip-position-bottom simptip-movable" data-tooltip="pintrest" href="#"> </a></li>
-									<div class="clear"> </div>
-								</ul>
-							</div>
-							<div class="clear"> </div>
-						</div>
-						<p class="team-info">Proin iaculis purus consequat sem cure  digni ssim donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt proin iaculis.</p>
-					</div>
-				</div>
-				<!----//End-team-members----> 
+
+
+<!-- ################################################################## -->
+
 				<!---strat-image-cursuals---->
                   <div class="t-clients">
                   	<div class="wrap"> 											 
@@ -343,41 +255,19 @@
 				  <!---->
 				  </div>				
 			</div>
-             <div class="contact" id="contact">
-		  	<div class="wrap">
-		  		<h3>CONTACT US</h3>
-		  		<p class="a">Proin iaculis purus consequat sem cure.</p>
-				<div class="form">
-				     <div class="form-text">
-					    <input type="text" class="textbox" value="Your Name*" onFocus="this.value = '';" onBlur="if (this.value == '') {this.value = 'Name';}">
-						<input type="text" class="textbox" value="Your E-mail*" onFocus="this.value = '';" onBlur="if (this.value == '') {this.value = 'E-mail';}">
-						<input name="Website" type="text" class="Subject" value="Website" onFocus="this.value = '';" onBlur="if (this.value == '') {this.value = 'Website';}">
-					</div>
-						 <textarea placeholder="Your Message*"></textarea>
-						 <div class="clear"> </div>
-						 <input type="submit" value="SEND MESSAGE">					 
-				 </div>
-   		   </div>
-   		 </div>
+
+
          <!----start-bottom-footer---->
 				<div class="bottom-footer">
 					<div class="wrap"> 
 						<div class="bottom-footer-left">
-							<p>&#169; Copyright 2014 Template. <a href="http://www.cssmoban.com/" target="_blank" title="模板之家">模板之家</a> - Collect from <a href="http://www.cssmoban.com/" title="网页模板" target="_blank">网页模板</a></p>
+						<!--	<p>Copyright © 2015 - 2016 Kylin Studio. All Rights Reserved. 麒麟工作室 版权所有 · <a href="http://www.miitbeian.gov.cn/" target="_blank">粤ICP备16026009号-1</a></p>  -->
+						<p>&#169; Kylin Studio·麒麟工作室 2015-2016 · <a href="http://www.miitbeian.gov.cn/" target="_blank">粤ICP备16026009号-1</a></p><br>
 						</div>
-						<div class="bottom-footer-center">
-							<ul class="bottom-social-icons">
-								<li><a class="bottom-twitter" href="#"> </a></li>
-								<li><a class="bottom-facebook" href="#"> </a></li>
-								<li><a class="bottom-pin" href="#"> </a></li>
-								<li><a class="bottom-google" href="#"> </a></li>
-								<div class="clear"> </div>
-							</ul>
-						</div>			  
-						<div class="clear"> </div>
 					</div>
 				</div>
 				<!----//End-bottom-footer---->
+ 
  <!-- scroll_top_btn -->
 		<script type="text/javascript" src="js/move-top.js"></script>
 		<script type="text/javascript" src="js/easing.js"></script>
@@ -391,6 +281,11 @@
 	</script>
 
 		 <a href="#" id="toTop" style="display: block;"><span id="toTopHover" style="opacity: 1;"></span></a>
+
+<!--51la访问量统计-->
+<script type="text/javascript" src="/js/scrolltopcontrol.js"></script>
+<script language="javascript" type="text/javascript" src="http://js.users.51.la/18856375.js"></script>
+<noscript><a href="http://www.51.la/?18856375" target="_blank"><img alt="&#x6211;&#x8981;&#x5566;&#x514D;&#x8D39;&#x7EDF;&#x8BA1;" src="http://img.users.51.la/18856375.asp" style="border:none" /></a></noscript>
 
 </body>
 </html>
